<resources>
    <string name="app_name">Foodex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="dont_have_an_account_sign_up">dont have an account ? </string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome back! You\'re just a tap away from something delicious</string>
    <string name="have_an_account">have an account ?</string>
    <string name="signin">SignIn</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send">Send</string>
    <string name="please_enter_your_email">Please Enter Your Email Address to change Your Password</string>
    <string name="my_saved_recipes">My Saved Recipes</string>
    <string name="meal_of_the_day">Daily Inspiration</string>
    <string name="search_by_categories">Most Popular Category</string>
    <string name="search_by_countries">Most Popular Countries</string>
    <string name="search_by_ingredients">Most Popular Ingredients</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="what_day_should_we_add_this_reciepe_to">What day should we add this reciepe to ?</string>
    <string name="loading">Loading</string>
    <string name="let_s_cook_it">Let\'s cook it</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="general_settings">General Settings</string>
    <string name="user_name">User Name</string>
    <string name="don_worry">Don\'t worry , you can always change this later in your meal plan</string>
    <string name="save">Save</string>
    <string-array name="flags">
        <item>https://www.worldometers.info/img/flags/us-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/uk-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ca-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ch-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/hr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/nl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/eg-flag.gif</item>
        <item>https://cdn.britannica.com/73/3473-004-6E573BFA/Flag-Philippines.jpg</item>
        <item>https://www.worldometers.info/img/flags/fr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/gr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/in-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ei-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/it-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/jm-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ja-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ke-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/my-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mx-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mo-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/pl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/po-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/rs-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/sp-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/th-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ts-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/tu-flag.gif</item>
        <item>https://www.freepnglogos.com/uploads/globe-png/globe-icon-aquanox-icons-softiconsm-34.png</item>
        <item>https://www.worldometers.info/img/flags/vm-flag.gif</item>
    </string-array>
</resources>