<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plan.view.PlanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sunday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>