<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".login.view.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        android:layout_margin="@dimen/_20sdp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_6sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/welcome_back"
                android:textColor="@color/pink"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:hint="@string/email"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    tools:ignore="TouchTargetSizeCheck" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                app:boxCornerRadiusTopStart="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="@id/layout_email"
                app:layout_constraintStart_toStartOf="@id/layout_email"
                app:layout_constraintTop_toBottomOf="@id/layout_email"
                app:startIconDrawable="@drawable/ic_lock"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/pink"
                android:padding="@dimen/_5sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/_16ssp"
                app:cornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/layout_password_sign_up"
                app:layout_constraintStart_toStartOf="@id/layout_password_sign_up"
                app:layout_constraintTop_toBottomOf="@id/layout_password_sign_up" />


            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/forget_password"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/btn_login"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <TextView
                android:id="@+id/tv_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/dont_have_an_account_sign_up"
                app:layout_constraintStart_toStartOf="@id/btn_login"
                app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/sign_up"
                android:textColor="@color/pink"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_dont_have_account"
                app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card"
        android:text="OR SignIn with "
        android:gravity="center"
        android:id="@+id/tv_sign"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign"
        android:layout_marginStart="@dimen/_50sdp"
        android:text="Google"
        android:backgroundTint="@color/pink"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_google"
        android:id="@+id/btn_google"
        app:cornerRadius="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_google"
        app:layout_constraintTop_toBottomOf="@id/tv_sign"
        android:layout_marginStart="@dimen/_50sdp"
        android:text="Guest"
        app:cornerRadius="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:backgroundTint="@color/pink"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_google"/>




</androidx.constraintlayout.widget.ConstraintLayout>